--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">SIGN IN</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -15,4 +15,12 @@
     </string>
     <string name="login_failed">Your tried to login using a wrong username or password</string>
     <string name="login_success">Login success</string>
+    <string name="title_activity_home_tab">HomeTabActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Cutting</string>
+    <string name="title_notifications">Delivery</string>
+    <string name="add_New_School">New School added to records</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
